test/Fail/Issue2487/b.agda
{-# OPTIONS --safe #-}
module Issue2487.b where

-- trying to import a cubical, non-safe module
open import Issue2487.c
